@@ -60,7 +60,6 @@ public class TestLeftOuterNLJoinExec {
   private SQLAnalyzer analyzer;
   private LogicalPlanner planner;
   private QueryContext defaultContext;
-  private StorageManager sm;
   private Path testDir;
 
   private TableDesc dep3;
@@ -81,7 +80,6 @@ public class TestLeftOuterNLJoinExec {
     catalog.createTablespace(DEFAULT_TABLESPACE_NAME, testDir.toUri().toString());
     catalog.createDatabase(DEFAULT_DATABASE_NAME, DEFAULT_TABLESPACE_NAME);
     conf = util.getConfiguration();
-    sm = StorageManager.getFileStorageManager(conf, testDir);
 
     //----------------- dep3 ------------------------------
     // dep_id | dep_name  | loc_id
