@@ -84,8 +84,8 @@ public class HashShuffleAppenderManager {
         if (!fs.exists(dataFile.getParent())) {
           fs.mkdirs(dataFile.getParent());
         }
-        FileAppender appender = (FileAppender)((FileStorageManager)StorageManager.getFileStorageManager(
-            tajoConf, null)).getAppender(meta, outSchema, dataFile);
+        FileAppender appender = (FileAppender)((FileStorageManager)StorageManager.getFileStorageManager(tajoConf))
+            .getAppender(meta, outSchema, dataFile);
         appender.enableStats();
         appender.init();
 
